--- a/package.json
+++ b/package.json
@@ -9,6 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/react": "^1.8.6",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@fontsource/inter": "^4.5.4",
+    "@fontsource/poppins": "^4.5.2",
+    "@googlemaps/react-wrapper": "^1.1.27",
+    "@heroicons/react": "^1.0.6",
+    "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
+    "framer-motion": "^6.2.8",
+    "mongoose": "^6.2.6",
+    "nanoid": "^3.3.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
