--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@heroicons/react": "^1.0.6",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "formik": "^2.2.9",
     "framer-motion": "^6.2.8",
     "mongoose": "^6.2.6",
     "nanoid": "^3.3.1",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.10.0",
