--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/poppins": "^4.5.2",
     "@googlemaps/react-wrapper": "^1.1.27",
     "@heroicons/react": "^1.0.6",
+    "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
