--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@fontsource/poppins": "^4.5.2",
     "@googlemaps/react-wrapper": "^1.1.27",
     "@heroicons/react": "^1.0.6",
+    "@next-auth/mongodb-adapter": "^1.0.3",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.8",
+    "mongodb": "^4.4.1",
     "mongoose": "^6.2.6",
     "nanoid": "^3.3.1",
     "next": "12.1.0",
+    "next-auth": "^4.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "yup": "^0.32.11"
