refactor: change components extension from '.js' to '.jsx'

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
+    "jsx": "preserve",
     "paths": {
       "components/*": ["components/*"],
       "core/*": ["core/*"],
@@ -9,5 +10,5 @@
       "templates/*": ["templates/*"],
       "styles/*": ["styles/*"],
     },
-  }
+  },
 }
