--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nanoid": "^3.3.1",
     "next": "12.1.0",
     "next-auth": "^4.3.1",
+    "next-s3-upload": "^0.1.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.34.16",
