--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.34.16",
+    "react-quill": "^2.0.0-beta.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
