--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@googlemaps/react-wrapper": "^1.1.27",
     "@heroicons/react": "^1.0.6",
     "@next-auth/mongodb-adapter": "^1.0.3",
+    "@react-google-maps/api": "^2.8.1",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
@@ -30,6 +31,7 @@
     "next-auth": "^4.3.1",
     "next-s3-upload": "^0.1.9",
     "react": "17.0.2",
+    "react-datepicker": "^4.7.0",
     "react-dom": "17.0.2",
     "react-query": "^3.34.16",
     "react-quill": "^2.0.0-beta.4",
