--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "fast-csv": "^4.3.6",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.8",
     "mongodb": "^4.4.1",
