--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroicons/react": "^1.0.6",
     "@next-auth/mongodb-adapter": "^1.0.3",
     "@react-google-maps/api": "^2.8.1",
+    "@trycourier/courier": "^3.12.0",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
@@ -31,6 +32,7 @@
     "next": "12.1.0",
     "next-auth": "^4.3.1",
     "next-s3-upload": "^0.1.9",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-datepicker": "^4.7.0",
     "react-dom": "17.0.2",
